# plank

./: CMakeLists.txt  README.md
src/ctests/: test1.c  test2.c  test3.c  test4.c
src/cxxtests/: test1.cpp  test2.cpp  test4.cpp
src/plank/: palloc.c  palloc.h  plank.h  sstream.c  sstream.h  vector.c  vector.h
src/plankmm/: noncopyable.h  plank.cpp  zero_initialized.h
